# hsr-sim

./: .gitattributes  .gitignore  AGENTS.md  README.md  alembic.ini  main.py  nonascii.txt  prek.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 3dab4cf2cfb7_auto_update.py  405808fdbf19_init_with_char_relics_light_cones.py  4e1465a6cd01_update_relationships.py  7c2b9d1e4f30_move_light_cone_fk_to_user_characters.py  b9f3c8e4a1d2_make_light_cone_equipped_by_unique.py
configs/characters/: seele.json
docs/: design.md  event系统用法.md  tui_battle_screen.md  角色配置版本化策略.md  速度系统.md
scripts/: ascii_art_for_logo.py  create_buff.py  create_character.py  create_enemy.py  create_light_cone.py  create_relic_set.py  migrate_character_configs.py  scaffold_utils.py  test_seele_battle.py  test_seele_skill_manual.py  unicode_loading.py  validate_configs.py
src/hsr_sim/: __init__.py  __main__.py
src/hsr_sim/battle/: __init__.py  session.py
tests/: test_base_repository.py  test_battle_controller_snapshot.py  test_battle_screen_selector.py  test_battle_session.py  test_battle_user_character_relationship.py  test_buff_components.py  test_buff_schema.py  test_character_config_load.py  test_config_loader_cache_and_buffs.py  test_config_loader_integration.py  test_create_equipment_services.py  test_db_session.py  test_db_types.py  test_event_system.py  test_events.py  test_factories.py  test_hooks.py  test_id_generator.py  test_import_utils.py  test_light_cone_repo.py  test_migrate_character_configs.py  test_relic_component.py  test_relic_config.py  test_relic_generator.py  test_relic_repo.py  test_repository_business_queries.py  test_script_generators_loadable.py  test_skill_script_loader.py  test_stat_calculator.py  test_team_user_character_relationship.py  test_user_light_cone_one_to_one.py  test_validate_configs.py
(+186 files in other folders)
