[project]
name = "hsr-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "modenicheng", email = "cheng20070225@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "eventure>=0.4.4",
    "rich>=14.3.4",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
