[project]
name = "hsr-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "modenicheng", email = "cheng20070225@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "esper>=3.7",
    "eventure>=0.4.4",
    "pydantic>=2.12.5",
    "rich>=14.3.4",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F"]
extend-select = ["D"]
ignore = ["E501", "W191", "D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
